--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -684,7 +684,82 @@ table.extension-listing {
 		}
 	}
 
+
+	@media screen and (max-width: 782px) {
+		display: block;
+
+		tbody,
+		thead,
+		tr {
+			display: block;
+			width: 100%;
+		}
+
+		tr.custom-extension {
+			background-color: #fff;
+
+			td {
+				padding-left: 20px !important;
+			}
+		}
+
+		tfoot {
+			width: 100%;
+			display: inline-block;
+			box-sizing: border-box;
+
+			td #btn-add-extensions {
+				margin: 10px 0 15px;
+			}
+
+		}
+
+		thead .ext-head:not(.ext-head-enable) {
+			display: none !important;
+		}
+
+		.ext-head.ext-head-enable {
+			width: 100% !important;
+			padding: 10px 0 0 10px !important;
+		}
+
+		td {
+			padding-left: 10px !important;
+			width: 100% !important;
+			box-sizing: border-box;
+
+			&:before {
+				top: 0;
+				left: 20px !important;
+				font-weight: 600;
+			}
+
+			&:first-child {
+				padding-left: 20px !important;
+			}
+
+			.extension-mime {
+				margin-bottom: 15px;
+			}
+		}
+
+	}
+
 }
+
+@media screen and (max-width: 1023px) {
+
+	#bp-hello-container.bp-hello-mime {
+		bottom: 0;
+
+		.bp-hello-header {
+			height: auto;
+			max-height: initial;
+			min-height: 58px;
+		}
+	}
+}
+
 
 /*
  * 3.0 Content
