--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -14093,6 +14093,18 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
 .location-folder-list-wrap-main .ac_document_search_folder_list .breadcrumbs-append-ul-li .item span,
 .location-folder-list-wrap-main .location-folder-list-wrap .breadcrumbs-append-ul-li .item span {
   display: inline-block !important;
+  max-width: 300px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  vertical-align: middle;
+}
+
+@media screen and (max-width: 520px) {
+  .location-folder-list-wrap-main .ac_document_search_folder_list .breadcrumbs-append-ul-li .item span,
+  .location-folder-list-wrap-main .location-folder-list-wrap .breadcrumbs-append-ul-li .item span {
+    max-width: 120px;
+  }
 }
 
 .location-folder-list-wrap-main .ac_document_search_folder_list .breadcrumbs-append-ul-li .item span:not(.more_options):hover,
@@ -14180,6 +14192,10 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   display: block;
   cursor: pointer;
   font-size: 14px;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span:before,
