#266 - added extension description in document activity

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -952,6 +952,7 @@ span.dashicons.dashicons-admin-file:before {
 				}
 
 				.document-description,
+				.document-extension-description,
 				.document-helper-text {
 					display: inline-block;
 					color: #939597;
