--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2108,6 +2108,10 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 			.media-folder_group {
 				width: 20%;
+
+				a {
+					color: #4d5c6d;
+				}
 			}
 
 		}
