“Edit Privacy” changed the icon and text

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -1089,7 +1089,7 @@ span.dashicons.dashicons-admin-file:before {
 						}
 
 						&.privacy_file a:before {
-							content: "\e960";
+							content: "\e90d";
 							font-size: 15px;
 						}
 
