--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1997,7 +1997,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 					}
 
 					&.privacy_file a:before {
-						content: "\e960";
+						content: "\e90d";
 						font-size: 15px;
 					}
 
