icon for edit album privacy

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -539,7 +539,7 @@
 	> li {
 
 		&:before {
-			content: "\e960";
+			content: "\e90d";
 			font-family: 'bb-icons';/* stylelint-disable-line */
 			font-size: 16px;
 			vertical-align: middle;
