--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -539,7 +539,7 @@
 	> li {
 
 		&:before {
-			content: "\e90d";
+			content: "\e960";
 			font-family: 'bb-icons';/* stylelint-disable-line */
 			font-size: 16px;
 			vertical-align: middle;
@@ -559,6 +559,17 @@
 
 		&.friends:before {
 			content: "\e95e";
+		}
+	}
+
+	> li.bb-edit-privacy {
+
+		a {
+			color: #7f868f;
+		}
+
+		&:before {
+			content: "\e90d";
 		}
 	}
 }
