--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1545,7 +1545,7 @@ div .activity-update-form #whats-new-content .medium-editor-toolbar.active {
 }
 
 .activity-privacy > li:before {
-  content: "\e90d";
+  content: "\e960";
   font-family: 'bb-icons';
   /* stylelint-disable-line */
   font-size: 16px;
@@ -1566,6 +1566,14 @@ div .activity-update-form #whats-new-content .medium-editor-toolbar.active {
 
 .activity-privacy > li.friends:before {
   content: "\e95e";
+}
+
+.activity-privacy > li.bb-edit-privacy a {
+  color: #7f868f;
+}
+
+.activity-privacy > li.bb-edit-privacy:before {
+  content: "\e90d";
 }
 
 .bb-media-model-container .bb-media-privacy-wrap .activity-privacy {
