--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2114,6 +2114,12 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 				}
 			}
 
+			.media-folder_status {
+				display: block;
+				font-size: 13px;
+				color: #939597;
+			}
+
 		}
 	}
 
