activity comment/edit - consistent styling

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -860,6 +860,7 @@ span.dashicons.dashicons-admin-file:before {
 
 		.edit {
 			display: block;
+			margin-bottom: 10px;
 		}
 	}
 
@@ -867,6 +868,7 @@ span.dashicons.dashicons-admin-file:before {
 
 		.add {
 			display: block;
+			margin-bottom: 10px;
 		}
 
 		.edit {
