--- a/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
@@ -32,6 +32,7 @@ form.ac-form {
 				outline: none;
 				padding: 0.5em;
 				width: 100%;
+				border-radius: 3px;
 				border: 1px solid #ccc;
 
 				&:focus {
