improved UI for edit/add description in popup

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -662,7 +662,7 @@ a.bb-close-model {
 			#add-activity-description {
 				width: 100%;
 				resize: none;
-				margin-bottom: 15px;
+				margin-bottom: 10px;
 
 				&:focus {
 
@@ -671,8 +671,30 @@ a.bb-close-model {
 			}
 
 			.description-new-submit {
-				margin-bottom: 10px;
-				text-align: right;
+				margin-bottom: 17px;
+
+				#bp-activity-description-new-submit {
+					padding: 7px 20px;
+					height: auto;
+					min-height: 10px;
+					line-height: 1;
+				}
+
+				#bp-activity-description-new-reset {
+					background: 0 0;
+					box-shadow: none;
+					border: 0;
+					font-size: 14px;
+					color: #a3a5a9;
+					font-weight: 500;
+					margin: 0;
+					padding: 0 10px;
+					width: auto;
+				}
+
+				#bp-activity-description-new-reset:hover {
+					color: #000;
+				}
 			}
 		}
 	}
