#266 - Fixed photo popup issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -539,6 +539,14 @@
 		display: flex;
 		align-items: center;
 		overflow: auto;
+
+		&.document-theatre {
+			display: none !important;
+
+			&.is-visible {
+				display: flex !important;
+			}
+		}
 	}
 }
 
