--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1560,7 +1560,8 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 .bp-media-document-uploader .dropzone .dz-preview,
 #whats-new-attachments #forums-post-document-uploader,
 #messages-post-document-uploader,
-.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader {
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader,
+.activity_update .activity-comments .ac-reply-content .dropzone {
 
 	.dz-success-mark,
 	.dz-progress,
