#266 - documents page loader border thickness issue fixed.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2112,6 +2112,10 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 #media-stream.document-parent {
 
+	> #bp-ajax-loader {
+		margin: 20px;
+	}
+
 	.document-data-table-head {
 
 		.data-head-name {
