#266 - document listing column issue when group component is deactivated fixed

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2110,7 +2110,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 	border-bottom: 1px solid #e7e9ec;
 }
 
-#media-stream.document-parent {
+#media-stream.document-parent.group-column {
 
 	> #bp-ajax-loader {
 		margin: 20px;
