--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1264,6 +1264,12 @@ ul.bb-albums-list {
 	margin-bottom: 20px;
 }
 
+.bb-field-wrap .bb-allowed-file-types {
+	margin-top: 10px;
+	font-size: 14px;
+	color: #888;
+}
+
 .bb-model-footer.flex .bb-dropdown-wrap {
 	margin-bottom: 0;
 }
