--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1709,6 +1709,9 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 }
 
 .bb-document-theater {
+	max-width: 1750px;
+	width: 90%;
+	min-width: auto;
 
 	.bb-media-section {
 		height: 90vh;
