#266 - fix for media, document and gif used one at a time for activity comment

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -585,7 +585,10 @@
 .active#bp-group-messages-document-button,
 .active#bp-group-messages-gif-button,
 .active#forums-gif-button,
-.active#messages-gif-button {
+.active#messages-gif-button,
+.ac-reply-media-button.active,
+.ac-reply-document-button.active,
+.ac-reply-gif-button.active {
 
 	.bb-icon {
 		color: #122b46;
