--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2332,7 +2332,10 @@ input.search-query-input {
 .active#bp-group-messages-document-button .bb-icon,
 .active#bp-group-messages-gif-button .bb-icon,
 .active#forums-gif-button .bb-icon,
-.active#messages-gif-button .bb-icon {
+.active#messages-gif-button .bb-icon,
+.ac-reply-media-button.active .bb-icon,
+.ac-reply-document-button.active .bb-icon,
+.ac-reply-gif-button.active .bb-icon {
   color: #122b46;
 }
 
