#266 - fix visibility update with default theme

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1930,6 +1930,10 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 				color: #939597;
 			}
 		}
+
+		.hide {
+			display: none;
+		}
 	}
 
 	.media-folder_actions {
