--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1099,8 +1099,80 @@ ul.bb-albums-list {
 		right: 10px;
 	}
 
-	body .bb-document-theater .bb-media-section {
-		height: calc(100vh - 145px);
+	.document.document-theatre {
+		display: block;
+	}
+
+	#buddypress .bb-document-theater {
+		width: calc(100% - 60px);
+		margin: 0 30px;
+		height: 100%;
+
+		.bb-media-model-inner {
+			height: 100%;
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: normal;
+			-ms-flex-direction: column;
+			flex-direction: column;
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: normal;
+			-ms-flex-flow: column;
+			flex-flow: column;
+
+			.bb-media-info-section.document {
+				-webkit-box-flex: 0;
+				-ms-flex: none;
+				flex: none;
+				width: 100%;
+
+				li.activity_update {
+					min-height: auto;
+				}
+			}
+		}
+
+		.bb-media-section {
+			width: 100%;
+			height: 60vh;
+			max-height: 60vh;
+
+			&.bb-media-no-preview .img-section > p {
+				font-size: 16px;
+				padding: 0 10px;
+				word-break: break-word;
+			}
+			
+			.document-preview {
+				padding-top: 35px;
+			}
+
+			.theater-command {
+				opacity: 1;
+				visibility: visible;
+
+				&.bb-next-document {
+					left: auto;
+					right: -30px;
+					width: 30px;
+					padding: 0;
+				}
+
+				&.bb-prev-document {
+					left: -30px;
+					width: 30px;
+					padding: 0;
+				}
+
+			}
+
+			.CodeMirror {
+				height: calc(60vh - 40px);
+			}
+	
+			.document-preview h3{
+				right: 0;
+			}
+		}
 	}
 }
 
@@ -1713,11 +1785,44 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 	width: 90%;
 	min-width: auto;
 
+	.bb-media-model-inner {
+		overflow: visible;
+
+		&:hover {
+
+			.theater-command {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+	}
+
 	.bb-media-section {
 		height: 90vh;
-		overflow: auto;
+		overflow: visible;
 		align-items: flex-end;
-		position: relative;
+		position: static;
+
+		.document-preview {
+			width: 100%;
+		}
+
+		.theater-command {
+			justify-content: center;
+
+			&.bb-prev-document {
+				left: -45px;
+				width: 45px;
+				padding: 0;
+			}
+
+			&.bb-next-document {
+				left: auto;
+				right: -45px;
+				width: 45px;
+				padding: 0;
+			}
+		}
 
 		&.bb-media-no-preview {
 			background-color: #fff;
@@ -1769,7 +1874,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			top: 0;
 			left: 0;
 			padding: 6px 0;
-			right: 0;
+			right: 376px;
 			text-align: center;
 			border-bottom: 1px solid #ecedee;
 			font-size: 16px;
