--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12484,8 +12484,67 @@ ul.bb-albums-list .bb-more-photos strong {
     top: 10px;
     right: 10px;
   }
-  body .bb-document-theater .bb-media-section {
-    height: calc(100vh - 145px);
+  .document.document-theatre {
+    display: block;
+  }
+  #buddypress .bb-document-theater {
+    width: calc(100% - 60px);
+    margin: 0 30px;
+    height: 100%;
+  }
+  #buddypress .bb-document-theater .bb-media-model-inner {
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column;
+    flex-flow: column;
+  }
+  #buddypress .bb-document-theater .bb-media-model-inner .bb-media-info-section.document {
+    -webkit-box-flex: 0;
+    -ms-flex: none;
+    flex: none;
+    width: 100%;
+  }
+  #buddypress .bb-document-theater .bb-media-model-inner .bb-media-info-section.document li.activity_update {
+    min-height: auto;
+  }
+  #buddypress .bb-document-theater .bb-media-section {
+    width: 100%;
+    height: 60vh;
+    max-height: 60vh;
+  }
+  #buddypress .bb-document-theater .bb-media-section.bb-media-no-preview .img-section > p {
+    font-size: 16px;
+    padding: 0 10px;
+    word-break: break-word;
+  }
+  #buddypress .bb-document-theater .bb-media-section .document-preview {
+    padding-top: 35px;
+  }
+  #buddypress .bb-document-theater .bb-media-section .theater-command {
+    opacity: 1;
+    visibility: visible;
+  }
+  #buddypress .bb-document-theater .bb-media-section .theater-command.bb-next-document {
+    left: auto;
+    right: -30px;
+    width: 30px;
+    padding: 0;
+  }
+  #buddypress .bb-document-theater .bb-media-section .theater-command.bb-prev-document {
+    left: -30px;
+    width: 30px;
+    padding: 0;
+  }
+  #buddypress .bb-document-theater .bb-media-section .CodeMirror {
+    height: calc(60vh - 40px);
+  }
+  #buddypress .bb-document-theater .bb-media-section .document-preview h3 {
+    right: 0;
   }
 }
 
@@ -13114,11 +13173,41 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   min-width: auto;
 }
 
+.bb-document-theater .bb-media-model-inner {
+  overflow: visible;
+}
+
+.bb-document-theater .bb-media-model-inner:hover .theater-command {
+  opacity: 1;
+  visibility: visible;
+}
+
 .bb-document-theater .bb-media-section {
   height: 90vh;
-  overflow: auto;
+  overflow: visible;
   align-items: flex-end;
-  position: relative;
+  position: static;
+}
+
+.bb-document-theater .bb-media-section .document-preview {
+  width: 100%;
+}
+
+.bb-document-theater .bb-media-section .theater-command {
+  justify-content: center;
+}
+
+.bb-document-theater .bb-media-section .theater-command.bb-prev-document {
+  left: -45px;
+  width: 45px;
+  padding: 0;
+}
+
+.bb-document-theater .bb-media-section .theater-command.bb-next-document {
+  left: auto;
+  right: -45px;
+  width: 45px;
+  padding: 0;
 }
 
 .bb-document-theater .bb-media-section.bb-media-no-preview {
@@ -13169,7 +13258,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   top: 0;
   left: 0;
   padding: 6px 0;
-  right: 0;
+  right: 376px;
   text-align: center;
   border-bottom: 1px solid #ecedee;
   font-size: 16px;
