--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13167,6 +13167,38 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   animation: spin 3s infinite linear;
 }
 
+.activity.activity_update .activity-comments .document-detail-wrap .document-extension-description {
+  max-width: calc(100% - 55px);
+  vertical-align: middle;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.activity.activity_update .activity-comments .document-helper-text {
+  height: 0;
+  overflow: hidden;
+  width: 0;
+}
+
+.activity.activity_update .activity-comments .bb-activity-media-elem.document-activity:hover .document-helper-text {
+  height: auto;
+  overflow: initial;
+  width: auto;
+}
+
+.activity.activity_update .activity-comments .bb-activity-media-elem.document-activity .document-helper-text {
+  max-width: calc(100% - 55px);
+  vertical-align: middle;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.activity.activity_update .activity-comments .acomment-content {
+  overflow: initial;
+}
+
 .bb-document-theater {
   max-width: 1750px;
   width: 90%;
