#266 - Forum page icon issue fixed.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -527,7 +527,8 @@
 		vertical-align: top;
 		margin-top: 4px;
 		display: inline-block;
-		width: 24px;
+		width: 23px;
+		color: rgba(18, 43, 70, 0.4);
 	}
 
 	.emojionearea .emojionearea-button:before {
